# rovel

./: .gitignore  Cargo.toml  README.md  config.example.toml
src/: lib.rs  main.rs
src/application/: error.rs  mod.rs
src/application/commands/: infer_commands.rs  mod.rs  novel_commands.rs  session_commands.rs  voice_commands.rs
src/application/commands/handlers/: infer_command_handlers.rs  mod.rs  novel_handlers.rs  session_command_handlers.rs  voice_handlers.rs
src/application/ports/: audio_cache.rs  audio_storage.rs  audio_transcoder.rs  mod.rs  repositories.rs  session_manager.rs  task_manager.rs  text_segmenter.rs  tts_engine.rs
src/application/queries/: audio_queries.rs  mod.rs  novel_queries.rs  voice_queries.rs
src/application/queries/handlers/: audio_handlers.rs  mod.rs  novel_handlers.rs  session_handlers.rs  voice_handlers.rs
src/config/: loader.rs  mod.rs  types.rs
src/domain/: mod.rs  text_segmenter.rs
src/domain/novel/: aggregate.rs  entities.rs  errors.rs  mod.rs  value_objects.rs
src/domain/voice/: aggregate.rs  errors.rs  mod.rs  value_objects.rs
src/infrastructure/: mod.rs
src/infrastructure/adapters/: mod.rs
src/infrastructure/adapters/storage/: file_storage.rs  mod.rs
src/infrastructure/adapters/tts/: mod.rs  (+2 more)
src/infrastructure/events/: mod.rs  publisher.rs
src/infrastructure/http/: dto.rs  error.rs  middleware.rs  mod.rs  routes.rs  server.rs  state.rs
src/infrastructure/memory/: mod.rs  session_manager.rs  task_manager.rs
src/infrastructure/persistence/: mod.rs
src/infrastructure/worker/: infer_worker.rs  mod.rs
(+18 files in other folders)
