[package]
name = "rovel"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# Web 框架
axum = { version = "0.7", features = ["multipart", "ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
http = "1.0"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "multipart"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# 错误处理
thiserror = "1"
anyhow = "1"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 异步 trait
async-trait = "0.1"

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Sled 嵌入式数据库 (音频缓存)
sled = "0.34"

# 并发数据结构
dashmap = "5"

# 配置管理
config = "0.14"
toml = "0.8"

# MD5 哈希 (缓存 key)
md5 = "0.7"

# Futures 工具
futures-util = "0.3"
tokio-util = { version = "0.7.18", features = ["io"] }

[dev-dependencies]
tempfile = "3"
